# bintools

./: Makefile.am  NEWS  configure.ac
truncate/: main.c
